Update Makefile and Documentation

--- a/Makefile.private
+++ b/Makefile.private
@@ -43,19 +43,19 @@ export HOST_USER
 export HOST_UID
 
 # all our targets are phony (no files to check).
-.PHONY: pull remove slides prune
+.PHONY: build remove slides
 
 # suppress makes own output
 #.SILENT:
 
 slides:
-	pull
+	build
 ifeq ($(strip $(FILE_ARGUMENTS)),)
 	# no command is given, give default run command
-	docker run --name pandoc-latex --volume `pwd`:/data -e OUTPUT_FILENAME=$(PROJECT_NAME) kw90/pandoc-latex:latest
+	docker run --name pandoc-latex --volume `pwd`:/data -e OUTPUT_FILENAME=$(PROJECT_NAME) pandoc-latex
 else
 	# run the command
-	docker run --name pandoc-latex --volume `pwd`:/data kw90/pandoc-latex:latest pandoc -t beamer "$(FILE_ARGUMENTS)" -o "$(FILE_ARGUMENTS)".pdf
+	docker run --name pandoc-latex --volume `pwd`:/data pandoc-latex pandoc -t beamer "$(FILE_ARGUMENTS)" -o "$(FILE_ARGUMENTS)".pdf
 endif
 
 # Regular Makefile part for buildpypi itself
@@ -63,7 +63,7 @@ help:
 	@echo ''
 	@echo 'Usage: make [TARGET] [EXTRA_ARGUMENTS]'
 	@echo 'Targets:'
-	@echo '  pull       pull docker container update (if available)'
+	@echo '  build      run docker build command for container'
 	@echo '  slides     run pandoc-latex --container-- for current dir and README.md file'
 	@echo '             Takes extra argument `file` to indicate a input file for conversion'
 	@echo '             Use make slides file="input.md" or make file="input.md" to generate input.pdf'
@@ -76,8 +76,8 @@ help:
 	@echo 'user=:	make shell user=root (no need to set uid=0)'
 @echo 'uid=:	make shell user=dummy uid=4000 (defaults to 0 if user= set)'
 
-pull:
-	docker pull kw90/pandoc-latex:latest
+build:
+	docker build -t pandoc-latex .
 
 remove:
 	docker rm pandoc-latex
